# MusicPlayer

./: .gitignore  AudioInfo.h  AudioInfoBox.qml  AudioSearchModel.cpp  AudioSearchModel.h  CMakeLists.txt  ImageButton.qml  Main.qml  PlayListPanel.qml  PlayerController.cpp  PlayerController.h  README.md  SearchField.qml  SearchPanel.qml  main.cpp
assets/audio/: FlyMeToTheMoon.mpeg  RollingInTheDeep.mpeg  TeachMeTonight.mpeg
assets/videos/: video_1.avi
